@@ -10,7 +10,8 @@
 
 package org.junit.platform.engine.support.hierarchical;
 
-import static org.apiguardian.api.API.Status.EXPERIMENTAL;
+import static java.util.Objects.requireNonNull;
+import static org.apiguardian.api.API.Status.MAINTAINED;
 import static org.apiguardian.api.API.Status.STABLE;
 
 import java.math.BigDecimal;
@@ -40,8 +41,8 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 		public ParallelExecutionConfiguration createConfiguration(ConfigurationParameters configurationParameters) {
 			int parallelism = configurationParameters.get(CONFIG_FIXED_PARALLELISM_PROPERTY_NAME,
 				Integer::valueOf).orElseThrow(
-					() -> new JUnitException(String.format("Configuration parameter '%s' must be set",
-						CONFIG_FIXED_PARALLELISM_PROPERTY_NAME)));
+					() -> new JUnitException(
+						"Configuration parameter '%s' must be set".formatted(CONFIG_FIXED_PARALLELISM_PROPERTY_NAME)));
 
 			int maxPoolSize = configurationParameters.get(CONFIG_FIXED_MAX_POOL_SIZE_PROPERTY_NAME,
 				Integer::valueOf).orElse(parallelism + 256);
@@ -66,8 +67,8 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 				BigDecimal::new).orElse(BigDecimal.ONE);
 
 			Preconditions.condition(factor.compareTo(BigDecimal.ZERO) > 0,
-				() -> String.format("Factor '%s' specified via configuration parameter '%s' must be greater than 0",
-					factor, CONFIG_DYNAMIC_FACTOR_PROPERTY_NAME));
+				() -> "Factor '%s' specified via configuration parameter '%s' must be greater than 0".formatted(factor,
+					CONFIG_DYNAMIC_FACTOR_PROPERTY_NAME));
 
 			int parallelism = Math.max(1,
 				factor.multiply(BigDecimal.valueOf(Runtime.getRuntime().availableProcessors())).intValue());
@@ -75,8 +76,7 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 			int maxPoolSize = configurationParameters.get(CONFIG_DYNAMIC_MAX_POOL_SIZE_FACTOR_PROPERTY_NAME,
 				BigDecimal::new).map(maxPoolSizeFactor -> {
 					Preconditions.condition(maxPoolSizeFactor.compareTo(BigDecimal.ONE) >= 0,
-						() -> String.format(
-							"Factor '%s' specified via configuration parameter '%s' must be greater than or equal to 1",
+						() -> "Factor '%s' specified via configuration parameter '%s' must be greater than or equal to 1".formatted(
 							factor, CONFIG_DYNAMIC_MAX_POOL_SIZE_FACTOR_PROPERTY_NAME));
 					return maxPoolSizeFactor.multiply(BigDecimal.valueOf(parallelism)).intValue();
 				}).orElseGet(() -> 256 + parallelism);
@@ -107,8 +107,8 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 									+ ParallelExecutionConfigurationStrategy.class);
 						return (ParallelExecutionConfigurationStrategy) ReflectionSupport.newInstance(strategyClass);
 					}) //
-					.andThenTry(strategy -> strategy.createConfiguration(configurationParameters)) //
-					.getOrThrow(cause -> new JUnitException(
+					.andThenTry(strategy -> requireNonNull(strategy).createConfiguration(configurationParameters)) //
+					.getNonNullOrThrow(cause -> new JUnitException(
 						"Could not create configuration for strategy class: " + className, cause));
 		}
 	};
@@ -144,7 +144,7 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 	 * @since 1.10
 	 * @see #FIXED
 	 */
-	@API(status = EXPERIMENTAL, since = "1.10")
+	@API(status = MAINTAINED, since = "1.13.3")
 	public static final String CONFIG_FIXED_MAX_POOL_SIZE_PROPERTY_NAME = "fixed.max-pool-size";
 
 	/**
@@ -160,7 +160,7 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 	 * @see #FIXED
 	 * @see #CONFIG_FIXED_MAX_POOL_SIZE_PROPERTY_NAME
 	 */
-	@API(status = EXPERIMENTAL, since = "1.10")
+	@API(status = MAINTAINED, since = "1.13.3")
 	public static final String CONFIG_FIXED_SATURATE_PROPERTY_NAME = "fixed.saturate";
 
 	/**
@@ -188,7 +188,7 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 	 * @since 1.10
 	 * @see #DYNAMIC
 	 */
-	@API(status = EXPERIMENTAL, since = "1.10")
+	@API(status = MAINTAINED, since = "1.13.3")
 	public static final String CONFIG_DYNAMIC_MAX_POOL_SIZE_FACTOR_PROPERTY_NAME = "dynamic.max-pool-size-factor";
 
 	/**
@@ -204,7 +204,7 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 	 * @see #DYNAMIC
 	 * @see #CONFIG_DYNAMIC_FACTOR_PROPERTY_NAME
 	 */
-	@API(status = EXPERIMENTAL, since = "1.10")
+	@API(status = MAINTAINED, since = "1.13.3")
 	public static final String CONFIG_DYNAMIC_SATURATE_PROPERTY_NAME = "dynamic.saturate";
 
 	/**
